# Introduction-to-Aerial-Robotics

./: .gitignore
proj1phase1/: Proj1 Phase1 Report.md  README.txt
proj1phase1/code/: circle_trajectory.m  controller.m  diamond_trajectory.m  hover_trajectory.m  test_trajectory.m  unreleased_trajectory.m
proj1phase1/code/readonly/: run_trajectory_readonly.m
proj1phase2/: Proj1 Phase2 Report.md  README.txt
proj1phase2/code/: controller.m  test_trajectory.m  trajectory_generator.m
proj1phase2/code/readonly/: run_trajectory_readonly.m
proj1phase3/: Proj1 Phase3 Report.md  README.txt
proj1phase3/code/: path_from_A_star.m  path_from_A_star_3d.m  test_trajectory.m  trajectory_generator.m
proj1phase4/: Proj1 Phase4 Report.md  log_1804289383_2.csv  swarmtal_csv_parser.py
proj2phase1/: Proj2 Phase1 Report .md
proj2phase1/src/: CMakeLists.txt  optical_flow_node.cpp  optical_flow_node_src.cpp
proj2phase2/: Proj2 Phase2 Report .md
proj2phase3/: Proj2 Phase3 Report .md
proj2phase3/ekf/: CMakeLists.txt
proj2phase3/ekf/config/: camera_ekf.yml  mat_ekf.yml
proj2phase3/ekf/launch/: A3.launch  flow_ekf.launch
proj2phase3/ekf/src/: ekf_node.cpp
proj2phase3/optical_flow/: CMakeLists.txt  package.xml
proj2phase3/optical_flow/src/: optical_flow_node.cpp
proj2phase3/tag_detector/src/: tag_detector_node.cpp
